# scorep_plugin_nvml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
.github/worksflows/: static_analysis.yml
cmake/: FindNVML.cmake
include/: nvml_measurement_thread.hpp  nvml_plugin.hpp  nvml_sampling_plugin.hpp  nvml_scorep_helper.hpp  nvml_sync_plugin.hpp  nvml_types.hpp  nvml_wrapper.hpp
src/: nvml_plugin.cpp  nvml_sampling_plugin.cpp  nvml_sync_plugin.cpp
